fixed white space on side

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ html, body {
         position: relative;
         margin: 0 -300px;
         left: 50%;
+        max-width: 600px;
     }
     
     .icon {
@@ -256,6 +257,7 @@ footer {
     border-top: 1px solid #b2b2b2;
     margin-left: -15px;
     margin-right: -15px;
+    line-height: 1.8;
 }
 
 footer .social {
